# CliCalculator

./: meson.build
src/: Calcu_Logic.vala  Collection.gs  Default_Values.vala  LinkedList.vala  main.vala  meson.build
